# Esercitazione_6_Sorting

./: .gitignore
Exercise1/: CMakeLists.txt  README.md  main.cpp
Exercise1/src/: SortingAlgorithm.hpp
Exercise1/src_test/: test_sorting_algorithm.hpp
Exercise2/: main.cpp
Exercise2/src/: SortingAlgorithm.hpp
Exercise2/src_test/: test_sorting_algorithm.hpp
